Essential is ready without services

--- a/public/wall.html
+++ b/public/wall.html
@@ -1,20 +1,15 @@
-<div style="background-color: white">
-    <div layout="row" layout-xs="column" layout-sm="column" >
-        <div flex> <img src="images/home_bgr.gif" class="img-responsive cube-img"/> </div>
-        <div layout="column" flex>
-            <div style="height:150px"></div>
-            <div layout="row">
-                <div layout="row" class="hexagon">
-                    <a du-smooth-scroll="view" du-scrollspy><img ui-sref="home.essential" src="images/ess_home.gif" class="img-responsive"> </a>
-                    <a du-smooth-scroll="view" du-scrollspy><img ui-sref="home.commercial" src="images/com_home.gif" class="img-responsive"></a>
-                </div>
-            </div>
-            <div style="height:150px"></div>
-            
+<div layout-xs="column" layout-sm="column" layout-gt-sm="row">
+    <div flex-xs="100" flex-sm="100" flex-gt-sm="50"> 
+        <img src="images/home_bgr.gif" class="cube-img"/> 
+    </div>
+    <div layout="column" flex-xs="100" flex-sm="100" flex-gt-sm="50" >
+        <div style="height:90px"></div>
+
+        <div layout="row" class="hexagon" layout-align-xs="center" layout-align-sm="center">
+            <a du-smooth-scroll="view" du-scrollspy><img ui-sref="essential" src="images/ess_home.gif" class="img-responsive"> </a>
+            <a du-smooth-scroll="view" du-scrollspy><img ui-sref="commercial" src="images/com_home.gif" class="img-responsive"></a>
         </div>
     </div>
 </div>
 
-<div layout="row" layout-padding layout-margin layout-fill style="min-height: 224px;">
-    <div id="view" ui-view></div>
-</div>
+
