Contact us form ready. Yet to succeed with upload file

--- a/public/essential_templates/essential.home.html
+++ b/public/essential_templates/essential.home.html
@@ -15,7 +15,7 @@
             <uib-accordion close-others="oneAtATime">
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(0)" >
+                        <div class="essential-panel" ng-click="toggle(0)" >
                             Logo and Stationary
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[0], 'glyphicon-chevron-right': !open[0]}">
                             </i>
@@ -31,7 +31,7 @@
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(1)" >
+                        <div class="essential-panel" ng-click="toggle(1)" >
                             Website
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[1], 'glyphicon-chevron-right': !open[1]}">
                             </i>
@@ -47,7 +47,7 @@
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(2)" >
+                        <div class="essential-panel" ng-click="toggle(2)" >
                             Brochure/ Product Catalogue
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[2], 'glyphicon-chevron-right': !open[2]}">
                             </i>
@@ -64,7 +64,7 @@
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(3)" >
+                        <div class="essential-panel" ng-click="toggle(3)" >
                             Customer Profile (Your Target Audience)
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[3], 'glyphicon-chevron-right': !open[3]}">
                             </i>
@@ -82,7 +82,7 @@
                 </div>
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(4)" >
+                        <div class="essential-panel" ng-click="toggle(4)" >
                             Business Plan  (Written on a Calendar)
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[4], 'glyphicon-chevron-right': !open[4]}">
                             </i>
@@ -110,7 +110,7 @@
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(5)" >
+                        <div class="essential-panel" ng-click="toggle(5)" >
                             Now it's time to Budget
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[5], 'glyphicon-chevron-right': !open[5]}">
                             </i>
