--- a/public/essential_templates/essential.services.html
+++ b/public/essential_templates/essential.services.html
@@ -15,7 +15,7 @@
             <uib-accordion close-others="oneAtATime">
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(0)" >
+                        <div class="essential-panel" ng-click="toggle(0)" >
                             Marketing
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[0], 'glyphicon-chevron-right': !open[0]}">
                             </i>
@@ -25,13 +25,13 @@
                         It’s the magic we exert to motivate people to buy the things our friends are selling. By mixing together our experience, some science, and a few sprinkles of magic, we create the right solution for each product or service to get sold. We’re practical - we determine who your customer is, what motivates them, and how to reach them. From the smallest to the largest projects, we’re asking ourselves: Why are we doing this? and How will this help sell? 
                     </p>
                     <p>
-                        We’d like to help you sell and share our magic with you - call today 00000000000 or contact us.
+                        We’d like to help you sell and share our magic with you - call today 00000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(1)" >
+                        <div class="essential-panel" ng-click="toggle(1)" >
                             Branding
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[1], 'glyphicon-chevron-right': !open[1]}">
                             </i>
@@ -44,13 +44,13 @@
                         Good branding is like the teddy bear you had as a child. It starts out as a recognizable item, and with every interaction, it imparts comfort; eventually becoming essential. It’s the reason you would dig through the hamper to find your teddy bear. In business, it may start with a logo, but branding is so much more.
                     </p> 
                     <p>
-                        If you’d like us to help take care of your branding - call today 0000000000 or contact us.
+                        If you’d like us to help take care of your branding - call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(2)" >
+                        <div class="essential-panel" ng-click="toggle(2)" >
                             Web Design
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[2], 'glyphicon-chevron-right': !open[2]}">
                             </i>
@@ -63,13 +63,13 @@
                         The websites we create are customized to your business, and come standard with the tools you need to keep them buzzing. Regardless of the engine that powers your site, our focus is on making it work for you. But most importantly, we know a website isn’t like a “field of dreams,” so from the start we work together to attract customers too.
                     </p>
                     <p>
-                        So if you’re looking for a web partner to rebuild or fiddle with your site so it works better - call today 0000000000 or contact us.
+                        So if you’re looking for a web partner to rebuild or fiddle with your site so it works better - call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(3)" >
+                        <div class="essential-panel" ng-click="toggle(3)" >
                             Package Design
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[3], 'glyphicon-chevron-right': !open[3]}">
                             </i>
@@ -82,12 +82,12 @@
                         First impressions matter. It’s a harsh truth for some of the new people we work with - it’s not the better mousetrap that wins - it’s the one in better packaging that’s selling.
                     </p>
                     <p>
-                        Fortunately, we know how to package mousetraps and other stuff too, so it flies off the shelf or website; interested? - call today 0000000000 or contact us.
+                        Fortunately, we know how to package mousetraps and other stuff too, so it flies off the shelf or website; interested? - call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
                     </p>   
                 </div>
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(4)" >
+                        <div class="essential-panel" ng-click="toggle(4)" >
                             Advertising
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[4], 'glyphicon-chevron-right': !open[4]}">
                             </i>
@@ -100,14 +100,14 @@
                         Yes, we’ll keep true to your brand and we’ll research customer motivations and desires, and we routinely create amazingly beautiful ads…but in the end it is advertising…and we know, if it’s not selling it is failing.
                     </p>
                     <p>
-                        So if you need ads that not only look great but, more importantly, sell stuff, and you’re occasionally compelled to request giant snipes or bursts - we might wince, but we can deal - call today 0000000 or contact us.
+                        So if you need ads that not only look great but, more importantly, sell stuff, and you’re occasionally compelled to request giant snipes or bursts - we might wince, but we can deal - call today 0000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
                     </p>
                         
                 </div>
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(5)" >
+                        <div class="essential-panel" ng-click="toggle(5)" >
                             Display Graphics
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[5], 'glyphicon-chevron-right': !open[5]}">
                             </i>
@@ -120,13 +120,13 @@
                         Don’t get us wrong, we take our jobs seriously, but when we get to design huge booths of ten-foot-tall graphics that incorporate lights, lasers, and flat panel screens…come on…it’s super fun - but with purpose.
                     </p>
                     <p>
-                        If you need a tradeshow or signage, and you’re alright with us getting all graphic with you, call today 0000000000 or contact us.
+                        If you need a tradeshow or signage, and you’re alright with us getting all graphic with you, call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
-                        <div class="transparent-panel" ng-click="toggle(6)" >
+                        <div class="essential-panel" ng-click="toggle(6)" >
                             Social Media
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[6], 'glyphicon-chevron-right': !open[6]}">
                             </i>
@@ -139,7 +139,7 @@
                         We can help to extend your conversation to key people, your consumers, and to their friends and their friend’s friends and so on. Through passive push or active engagement we keep people talking - and, of course, sometimes we simply listen too. 
                     </p>
                     <p>
-                        So if you’re looking to make friends and influence people, call today 0000000000 or contact us.
+                        So if you’re looking to make friends and influence people, call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
                     </p>
                 </div>
             </uib-accordion>
