--- a/public/navbar.html
+++ b/public/navbar.html
@@ -34,9 +34,9 @@
                         <span class="caret"></span>
                         
                         <ul class="dropdown-menu">
-                            <li><a ui-sref="commercial.home">Commercial</a></li>
+                            <li><a ui-sref="commercial.home">Fund Raising</a></li>
                             <li><a ui-sref="commercial.about">About Us</a></li>
-                            <li><a ui-sref="commercial.work">Work Process</a></li>
+                            <li><a ui-sref="commercial.work">Fund Raising Process</a></li>
                         </ul>
                     </a>
                 </li>
