--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,102 @@
-<div class="data" layout-xs="column" layout-sm="column" layout-gt-sm="row">
-    <div layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
-        <img src="images/contactus_ess.gif" class="img-responsive">
+<div layout="column">
+<div layout="row" class="sticky-div">
+    <div class="ess-cube" flex>
+        <img src="images/contactus_bgr.gif" class="img-responsive">
     </div>
-    <div flex-xs="100" flex-sm="100" flex-gt-sm="55" layout-margin>
-        
-        <h1>Contact Us</h1>
+
+    <div class="contact-right-panel" flex hide-sm hide-xs>
+        <!--<img src="images/ess_bgr.gif" class="img-responsive">-->
+    </div>
+
+
+</div>
+
+<div class="scrollable-div">
+    <div class="data" layout-xs="column" layout-sm="column" layout-gt-sm="row" flex="100">
+        <div layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="40" layout-align="center start">
+            <img src="images/contactus_ess.gif" class="img-responsive">
+        </div>
+        <div flex-xs="100" flex-sm="100" flex-gt-sm="60" layout-margin layout-align="center center">
+            <p>
+                <strong>
+                    “We don’t meet people by accident. They are meant to cross our path for reason!”
+                </strong>
+            </p>
+            <p>
+                We're always happy to make new friends or to hear from smart, funny people. So go ahead, reach out and contact us.... we dare you.
+            </p>
+            <div class="form" layout-padding name="contact_form">
+                <form ng-controller="QueryController">
+                <md-input-container class="md-icon-float md-block">
+                    <!-- Use floating label instead of placeholder -->
+                    <label>Name</label>
+                    <md-icon class="md-icon-button">
+                        <i class="material-icons">account_circle</i>
+                    </md-icon>
+                    <input ng-model="name" type="text" ng-required="true" name="name">
+                    <div ng-messages="contact_form.name.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container class="md-icon-float md-block">
+                    <label>Contact</label>
+                    <md-icon class="md-icon-button">
+                        <i class="material-icons">phone</i>
+                    </md-icon>
+                    <input ng-model="phone" type="text" ng-required="true" name="phone">
+                    <div ng-messages="contact_form.phone.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <!-- Use floating placeholder instead of label -->
+                    <md-icon class="md-icon-button">
+                        <i class="material-icons">email</i>
+                    </md-icon>
+                    <input ng-model="email" type="email" placeholder="Email (required)" ng-required="true" name="email">
+                    <div ng-messages="contact_form.email.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container class="md-icon-float md-block">
+                    <!-- Use floating label instead of placeholder -->
+                    <label>Business Name</label>
+                    <md-icon class="md-icon-button">
+                        <i class="material-icons">business_center</i>
+                    </md-icon>
+                    <input ng-model="business" type="text" ng-required="true" name="business">
+                    <div ng-messages="contact_form.business.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Click to enter your query</label>
+                    <md-icon class="md-icon-button">
+                        <i class="material-icons">question_answer</i>
+                    </md-icon>
+                    <textarea ng-model="query" md-maxlength="150" rows="5" md-select-on-focus ng-required="true" name="query"></textarea>
+                    <div ng-messages="contact_form.query.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <i class="material-icons">attachment</i>
+                    <!--<input type="file" id="attachment" ng-model="file" aria-label="attachment">    -->
+                    
+                </md-input-container>
+                <!--<button type="submit" class="btn btn-info">Submit</button>-->
+                <md-button class="md-raised md-primary" ng-click="sendQuery()">Submit</md-button>
+            </form>
+            </div>
+        </div>
     </div>
 </div>
+</div>
+<!--
+    Name
+    Email
+    Contact
+    Business Name
+    Attachement
+    Query 
+-->
