--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="images/inside_logo.gif" rel="icon" type="image/x-icon" />
     <title>Welcome to EssCom. Serving Essential and Commercial needs</title>
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="stylesheets/style.css" rel="stylesheet"> 
     <link href="stylesheets/essential_styles.css" rel="stylesheet">
     <link href="stylesheets/commercial_styles.css" rel="stylesheet">
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-scroll/angular-scroll.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-2.1.3.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-upload/angular-upload.min.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
     
     
