--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
     <script type="text/javascript" src="bower_components/angular-messages/angular-messages.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-scroll/angular-scroll.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-2.1.3.min.js"></script>
+    <!--<script type="text/javascript" src="bower_components/angular-scroll/angular-scroll.min.js"></script>-->
     <script type="text/javascript" src="bower_components/angular-upload/angular-upload.min.js"></script>
     <script type="text/javascript" src="javascripts/app.js"></script>
     
