Applied changed images to only ess part

--- a/public/commercial_templates/commercial.html
+++ b/public/commercial_templates/commercial.html
@@ -13,6 +13,6 @@
         Loading......
         <md-progress-circular md-mode="indeterminate"></md-progress-circular>
     </div>
-    <div class="scrollable-div data" >   
+    <div class="scrollable-div data" resize ng-class="resolveBackColor()">   
         <div ui-view></div>   
     </div>
