--- a/public/commercial_templates/commercial.home.html
+++ b/public/commercial_templates/commercial.home.html
@@ -1,4 +1,4 @@
-<div class="data" layout-xs="column" layout-sm="column" layout-gt-sm="row">
+<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-gt-sm="row">
     <div layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
         <img src="images/com_icon.gif" class="img-responsive">
     </div>
