--- a/public/essential_templates/essential.work.html
+++ b/public/essential_templates/essential.work.html
@@ -1,6 +1,6 @@
-<div class="data" layout-xs="column" layout-sm="column" layout-gt-sm="row">
+<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-gt-sm="row">
     <div layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
-        <img src="images/workprocess_ess.gif" class="img-responsive">
+        <img src="images/workprocess_ess_option.gif" class="img-responsive img-stretch">
     </div>
     <div flex-xs="100" flex-sm="100" flex-gt-sm="55" layout-margin>
     
