--- a/public/essential_templates/essential.about.html
+++ b/public/essential_templates/essential.about.html
@@ -1,8 +1,8 @@
 <div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-gt-sm="row">
-    <div layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
-        <img src="images/aboutus_ess_option.gif" class="img-responsive img-stretch">
+    <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
+        <img src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
     </div>
-    <div flex-xs="100" flex-sm="100" flex-gt-sm="55" layout-margin>
+    <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" layout-margin>
         
         <h4><strong>“The things that we love tell us what we are.”</strong></h4>
         
