--- a/public/essential_templates/essential.html
+++ b/public/essential_templates/essential.html
@@ -1,6 +1,9 @@
 <div layout="row" class="sticky-div">        
-    <div class="ess-leg" flex hide-sm hide-xs>
-        <img src="images/ess_bgr.gif" class="img-responsive">
+    <div class="ess-cube" flex hide-sm hide-xs hide-md>
+            <img ng-src="images/{{leftPanelImage}}" class="img-responsive">
+    </div>
+    <div class="ess-leg" flex hide-sm hide-xs hide-md>
+        <img ng-src="images/{{rightPanelImage}}" class="img-responsive">
     </div>
 </div>
 <div ng-show="showPageLoad" id="load">
@@ -8,5 +11,5 @@
     <md-progress-circular md-mode="indeterminate"></md-progress-circular>
 </div>
 <div class="scrollable-div" resize ng-class="resolveBackColor()">
-    <div ui-view id="view"></div>
+    <div ui-view autoscroll="true" id="view"></div>
 </div>
