--- a/public/footer.html
+++ b/public/footer.html
@@ -1,5 +1,5 @@
-<div class="navbar navbar-default navbar-fixed-bottom footer">
+<div class="footer">
     <div class="container-fluid">
-        <p>2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by <a ui-sref="contact">EssCom</a></p>
+        <p>2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by <a ui-sref="home">EssCom</a></p>
     </div>
 </div>
