--- a/public/wall.html
+++ b/public/wall.html
@@ -16,6 +16,8 @@
         </div>
         <div id="bottom-div" hide-xs></div>
     </div>
+    <div hide-gt-sm ng-include="'footer.html'"></div>
 </div>
+<div hide-xs hide-sm ng-include="'footer.html'"></div>
 
 
