--- a/public/essential_templates/essential.about.html
+++ b/public/essential_templates/essential.about.html
@@ -1,6 +1,6 @@
-<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-gt-sm="row">
-    <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
-        <img src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
+<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-md="column" layout-gt-md="row">
+    <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="25" layout-align="center start">
+        <img ng-src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
     </div>
     <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" layout-margin>
         
