--- a/public/essential_templates/essential.html
+++ b/public/essential_templates/essential.html
@@ -12,4 +12,5 @@
 </div>
 <div class="scrollable-div" resize ng-class="resolveBackColor()">
     <div ui-view autoscroll="true" id="view"></div>
+    <div ng-include="'footer.html'"></div>
 </div>
