--- a/public/essential_templates/essential.services.html
+++ b/public/essential_templates/essential.services.html
@@ -1,4 +1,4 @@
-<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-gt-sm="row">
+<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-md="column" layout-gt-md="row">
     <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
         <img src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
     </div>
@@ -146,6 +146,3 @@
         </div>
     </div>
 </div>
-
-
-
