--- a/public/footer.html
+++ b/public/footer.html
@@ -1,5 +1,8 @@
 <div class="footer">
-    <div class="container-fluid">
-        <p>2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by <a ui-sref="home">EssCom</a></p>
-    </div>
+    
+    <p>
+        2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by 
+        <a ui-sref="home">EssCom</a>
+    </p>
+    
 </div>
