--- a/public/essential_templates/essential.home.html
+++ b/public/essential_templates/essential.home.html
@@ -2,7 +2,7 @@
     <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="25" layout-align="center start">
         <img ng-src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
     </div>
-    <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" layout-margin>
+    <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" id="pad" apply-padding-top ng-style="addPadding()" layout-margin>
 
         <div ng-controller="AccordionController">
             <h4>
