Ess done fully with new images

--- a/public/commercial_templates/commercial.about.html
+++ b/public/commercial_templates/commercial.about.html
@@ -1,8 +1,8 @@
-<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-gt-sm="row">
-    <div layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
-        <img src="images/aboutus_com.gif" class="img-responsive">
+<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-md="column" layout-gt-md="row">
+    <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="25" layout-align="center start">
+        <img ng-src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
     </div>
-    <div flex-xs="100" flex-sm="100" flex-gt-sm="55" layout-margin>
+    <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" id="pad" layout-margin>
         <p>
             We're a dedicated team with right resources and dedication to achieve results, work closely with clients who believe in us. Funding is always a need at every corner of the street but only few of them able to fulfil the eligibility to avail funding for their business. The reasons may be various but if they follow certain rules and disciplines to manage their money, funds can be made available for their business prospect in near future. Check our fund raising process to understand the guidelines to manage your money.
         </p>
