--- a/public/essential_templates/essential.home.html
+++ b/public/essential_templates/essential.home.html
@@ -2,11 +2,12 @@
     <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="25" layout-align="center start">
         <img ng-src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
     </div>
-    <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" id="pad" apply-padding-top ng-style="addPadding()" layout-margin>
+    <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" id="pad" layout-margin>
 
         <div ng-controller="AccordionController">
+            <h4><strong>ADVERTISING & MARKETNG</strong></h4>
             <h4>
-                <strong>"Marketing a business is simple yet essential!"</strong> 
+                <strong>Marketing a business is simple yet essential!</strong> 
             </h4> 
             <p>
                 Nine out of ten times the problem is not bad marketing but the complete lack of it. Few of them don&rsquo;t plan for it or is neglected and/ or forgotten. Hence no planning, no marketing. But those who realise and finally wanting to streamline their Marketing process must consider six essentials:
@@ -48,7 +49,7 @@
 
                     <uib-accordion-heading>
                         <div class="essential-panel" ng-click="toggle(2)" >
-                            Brochure/ Product Catalogue
+                            Brochure & Product Catalogue
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[2], 'glyphicon-chevron-right': !open[2]}">
                             </i>
                         </div>
@@ -58,14 +59,14 @@
                     </p>
                     
                     <p>
-                        A brochure or product catalogue are still relied on by many - even if it’s a PDF downloaded from your website. A brochure or product catalogue reinforces your sales message before or after you’ve left them with customers. And more importantly, they can be shared, and continue to spread the word about you without your interaction.
+                        A brochure or product catalogue are still relied on by many - even if it’s a PDF downloaded from own website. A brochure or product catalogue reinforces your sales message before or after you’ve left them with customers. And more importantly, they can be shared, and continue to spread the word about you without your interaction.
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
 
                     <uib-accordion-heading>
                         <div class="essential-panel" ng-click="toggle(3)" >
-                            Customer Profile (Your Target Audience)
+                            Customer Profile
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[3], 'glyphicon-chevron-right': !open[3]}">
                             </i>
                         </div>
@@ -83,7 +84,7 @@
                 <div uib-accordion-group class="panel-default">
                     <uib-accordion-heading>
                         <div class="essential-panel" ng-click="toggle(4)" >
-                            Business Plan  (Written on a Calendar)
+                            Business Plan
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[4], 'glyphicon-chevron-right': !open[4]}">
                             </i>
                         </div>
@@ -111,7 +112,7 @@
 
                     <uib-accordion-heading>
                         <div class="essential-panel" ng-click="toggle(5)" >
-                            Now it's time to Budget
+                            Budget
                             <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[5], 'glyphicon-chevron-right': !open[5]}">
                             </i>
                         </div>
@@ -126,6 +127,9 @@
                     </p>
                     <p>
                         Usually we’re doing this in conjunction with the plan since it’s silly to write on our calendar we’re going to create a Super Bowl commercial for our little flower shop - we won’t have the budget. But when we’re thinking of how to best reach our customers - we often skip worrying about the budget - so we’re not constrained in our ideas. We can always remove or add things now, at budgeting. And who knows, maybe a crazy idea will seem brilliant and you can shift money around to pay for it. And remember, periodically, we’ll be reviewing our plan to adjust what we’re doing - we’re not carving things into stone. But we are committing ourselves to accomplish specific things on specific dates.
+                    </p>
+                    <p>
+                        We may suggest you few tips to carry your financial budgeting for advertising and marketing while planning your overall business budget.
                     </p>
                 </div>
             </uib-accordion>
@@ -153,7 +157,7 @@
             </p>
 
             <p> 
-                So now grab a calendar off the wall or open one on your computer and start to pick the holidays or events that are relevant to your business. Then add the marketing materials you want to have ready for those dates and get to work. Don&rsquo;t wait until it&rsquo;s too late. 
+                So now grab a calendar off the wall or open one on your computer and start to pick the holidays or events that are relevant to your business. Then add the marketing materials you want to have ready for those dates and get to work. Or does it sound too complex to do? Don’t wait until it’s too late…Just flip through more information or <a ui-sref="contact"><strong>Contact Us</strong></a> to look into it!
             </p>
         </div>
 
