--- a/public/essential_templates/essential.services.html
+++ b/public/essential_templates/essential.services.html
@@ -5,10 +5,10 @@
     <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" layout-margin>
         
         <div>
-            <h4><strong>"Creativity can solve almost any problem!"</strong></h4>
+            <h4><strong>SERVICES</strong></h4>
             <p>
                 We’re problem solvers…
-                We always start by listening intensely. We want to understand your troubles and the challenges your business is facing. Only after we’ve learned about your business, your industry, and your competitors, we start working together to develop and implement essential solutions like Marketing, branding, website, packaging, advertising, displays and social media.
+                We always start by listening intensely. We want to understand your troubles and the challenges your business is facing. Only after we’ve learned about your business, your industry, and your competitors, we start working together to develop and implement essential solutions like Marketing, branding, website, packaging, advertising, displays, social media and multimedia.
             </p>
         </div>
         <div ng-controller="AccordionController">
@@ -25,7 +25,7 @@
                         It’s the magic we exert to motivate people to buy the things our friends are selling. By mixing together our experience, some science, and a few sprinkles of magic, we create the right solution for each product or service to get sold. We’re practical - we determine who your customer is, what motivates them, and how to reach them. From the smallest to the largest projects, we’re asking ourselves: Why are we doing this? and How will this help sell? 
                     </p>
                     <p>
-                        We’d like to help you sell and share our magic with you - call today 00000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
+                        We’d like to help you sell and share our magic with you - call today 00000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -44,7 +44,7 @@
                         Good branding is like the teddy bear you had as a child. It starts out as a recognizable item, and with every interaction, it imparts comfort; eventually becoming essential. It’s the reason you would dig through the hamper to find your teddy bear. In business, it may start with a logo, but branding is so much more.
                     </p> 
                     <p>
-                        If you’d like us to help take care of your branding - call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
+                        If you’d like us to help take care of your branding - call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -63,7 +63,7 @@
                         The websites we create are customized to your business, and come standard with the tools you need to keep them buzzing. Regardless of the engine that powers your site, our focus is on making it work for you. But most importantly, we know a website isn’t like a “field of dreams,” so from the start we work together to attract customers too.
                     </p>
                     <p>
-                        So if you’re looking for a web partner to rebuild or fiddle with your site so it works better - call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
+                        So if you’re looking for a web partner to rebuild or fiddle with your site so it works better - call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -82,7 +82,7 @@
                         First impressions matter. It’s a harsh truth for some of the new people we work with - it’s not the better mousetrap that wins - it’s the one in better packaging that’s selling.
                     </p>
                     <p>
-                        Fortunately, we know how to package mousetraps and other stuff too, so it flies off the shelf or website; interested? - call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
+                        Fortunately, we know how to package mousetraps and other stuff too, so it flies off the shelf or website; interested? - call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
                     </p>   
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -100,7 +100,7 @@
                         Yes, we’ll keep true to your brand and we’ll research customer motivations and desires, and we routinely create amazingly beautiful ads…but in the end it is advertising…and we know, if it’s not selling it is failing.
                     </p>
                     <p>
-                        So if you need ads that not only look great but, more importantly, sell stuff, and you’re occasionally compelled to request giant snipes or bursts - we might wince, but we can deal - call today 0000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
+                        So if you need ads that not only look great but, more importantly, sell stuff, and you’re occasionally compelled to request giant snipes or bursts - we might wince, but we can deal - call today 0000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
                     </p>
                         
                 </div>
@@ -120,7 +120,7 @@
                         Don’t get us wrong, we take our jobs seriously, but when we get to design huge booths of ten-foot-tall graphics that incorporate lights, lasers, and flat panel screens…come on…it’s super fun - but with purpose.
                     </p>
                     <p>
-                        If you need a tradeshow or signage, and you’re alright with us getting all graphic with you, call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
+                        If you need a tradeshow or signage, and you’re alright with us getting all graphic with you, call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
                     </p>
                 </div>
                 <div uib-accordion-group class="panel-default">
@@ -139,7 +139,29 @@
                         We can help to extend your conversation to key people, your consumers, and to their friends and their friend’s friends and so on. Through passive push or active engagement we keep people talking - and, of course, sometimes we simply listen too. 
                     </p>
                     <p>
-                        So if you’re looking to make friends and influence people, call today 0000000000 or <a ui-sref="contact"><strong>contact us.</strong></a>
+                        So if you’re looking to make friends and influence people, call today 0000000000 or <a ui-sref="contact"><strong>Contact Us.</strong></a>
+                    </p>
+                </div>
+                <div uib-accordion-group class="panel-default">
+
+                    <uib-accordion-heading>
+                        <div class="essential-panel" ng-click="toggle(7)" >
+                            Multimedia
+                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': open[7], 'glyphicon-chevron-right': !open[7]}">
+                            </i>
+                        </div>
+                    </uib-accordion-heading>
+                    <p>
+                        The multimedia services area is a fast-moving business and technology environment that builds on many different architectures. End-user experience (the components that are actually of interest and visible to end-users), technology (the hardware, software and middleware used to create solutions) and integration (integrating products, technologies and services to achieve the end-user experience) are main components involved to build a multimedia experience.
+                    </p>
+                    <p>
+                        Multimedia can be recorded and played, displayed, interacted with or accessed by information content processing devices, such as computerized and electronic devices, but can also be part of a live performance. Multimedia may be broadly divided into linear and non-linear categories. Linear active content progresses often without any navigational control for the viewer such as a cinema presentation. Non-linear uses interactivity to control progress as with a video game or self-paced computer based training or corporate presentation. 
+                    </p>
+                    <p>
+                        The various formats of technological or digital multimedia may be intended to enhance the users' experience, for example to make it easier and faster to convey information. Or in entertainment or art, to transcend everyday experience. Enhanced levels of interactivity are made possible by combining multiple forms of media content.
+                    </p>
+                    <p>
+                        If you’re looking for enhanced content interaction with the end user, call or mail us today.
                     </p>
                 </div>
             </uib-accordion>
