--- a/public/wall.html
+++ b/public/wall.html
@@ -18,6 +18,6 @@
             <div id="bottom-div" hide-xs></div>
         </div>
     </div>
-    <div ng-include="'footer.html'"></div>
+    <div style="margin-top:30px" ng-include="'footer.html'"></div>
 </div>
 
