--- a/public/commercial_templates/commercial.work.html
+++ b/public/commercial_templates/commercial.work.html
@@ -1,9 +1,9 @@
-<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-gt-sm="row">
-    <div layout="row" flex-xs="100" flex-sm="100" flex-gt-sm="25" layout-align="center start">
-        <img src="images/workprocess_com.gif" class="img-responsive">
+<div class="data prevent-footer-cover" layout-xs="column" layout-sm="column" layout-md="column" layout-gt-md="row">
+    <div class="img-top-panel" layout="row" flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="25" layout-align="center start">
+        <img ng-src="images/{{leftPanelImage}}" class="img-responsive img-stretch" hide-gt-md>
     </div>
         
-    <div flex-xs="100" flex-sm="100" flex-gt-sm="55" layout-margin>
+    <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" id="pad" layout-margin>
         <div ng-controller="AccordionController">
             <p>
                 <strong>
