--- a/public/essential_templates/essential.work.html
+++ b/public/essential_templates/essential.work.html
@@ -4,7 +4,7 @@
     </div>
     <div flex-xs="100" flex-sm="100" flex-md="100" flex-gt-md="55" layout-margin>
     
-        <h4><strong>“It’s amazing what we can accomplish when we are in it together!”</strong> </h4>
+        <h4><strong>WORK PROCESS</strong> </h4>
         
         <p>
             We begin each new relationship by getting to know you and your business. We learn about your strengths, your weakness, your competition, and your marketplace. Most importantly, we learn about your customers and prospects. We discover who they are and what motivates them.
